@@ -73,9 +73,19 @@ Silva changes
 
       - fixed 101567: hires image links work from kupu but not widgets
         renderers
-       
-      
+
       - fixed 148863: toc rendering not XHTML compliant
+
+      - Security.sec_get_all_roles_for_userid(userid) was broken in
+        that it ignored the argument. Changed it to
+        Security.sec_get_all_roles() and all calls to it, which were
+        passing in the current userid anyway.
+
+    Features added:
+
+      - additional behaviour to mangle.Id.new(), when passing True
+        as the first argument one can suppress the ValueError raised
+        on invalid ids (and always have a new id generated)
 
     Ported from 1.6 branch
 
